--- a/package.json
+++ b/package.json
@@ -3,10 +3,19 @@
   "version": "0.1.0",
   "description": "A data visualization library for the terminal using ASCII characters.",
   "type": "module",
+  "exports": {
+    "import": "./dist/index.js",
+    "require": "./dist/index.cjs"
+  },
+  "engines": {
+    "node": ">=16.0.0"
+  },
+  "module": "./dist/index.js",
   "main": "dist/index.js",
+  "types": "dist/index.d.ts",
   "scripts": {
     "start": "echo \"Hello world\"",
-    "build": "tsup index.ts --format cjs,esm --dts --out-dir dist"
+    "build": "tsup src/index.ts --format esm,cjs --dts --minify"
   },
   "author": {
     "name": "José Martínez Santana"
@@ -27,10 +36,14 @@
   "bugs": {
     "url": "https://github.com/MetalbolicX/chartex/issues"
   },
-  "files": ["src"],
+  "files": [
+    "dist"
+  ],
   "license": "MIT",
-  "dependencies": {},
   "devDependencies": {
-    "tsup": "^8.5.0"
-  }
+    "@types/node": "^24.0.10",
+    "tsup": "^8.5.0",
+    "typescript": "^5.8.3"
+  },
+  "packageManager": "pnpm@10.12.4+sha512.5ea8b0deed94ed68691c9bad4c955492705c5eeb8a87ef86bc62c74a26b037b08ff9570f108b2e4dbd1dd1a9186fea925e527f141c648e85af45631074680184"
 }
