--- a/package.json
+++ b/package.json
@@ -12,12 +12,12 @@
     "node": ">=16.0.0"
   },
   "module": "./dist/index.js",
-  "main": "dist/index.js",
+  "main": "dist/index.cjs",
   "types": "dist/index.d.ts",
   "scripts": {
     "docs": "docsify serve docs",
     "start": "echo \"Hello world\"",
-    "build": "tsup src/index.ts --format esm,cjs --dts --minify"
+    "build": "tsup index.js --format esm,cjs --dts --minify"
   },
   "author": {
     "name": "José Martínez Santana"
