--- a/package.json
+++ b/package.json
@@ -5,8 +5,14 @@
   "type": "module",
   "homepage": "https://metalbolicx.github.io/chartex/#/",
   "exports": {
-    "import": "./dist/index.js",
-    "require": "./dist/index.cjs"
+    "import": {
+      "types": "./dist/index.d.ts",
+      "default": "./dist/index.js"
+    },
+    "require": {
+      "types": "./dist/index.d.cts",
+      "default": "./dist/index.cjs"
+    }
   },
   "engines": {
     "node": ">=16.0.0"
