feat: update documentation links and add sparkline chart functionality

--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.3.0",
   "description": "A data visualization library for the terminal using ASCII characters.",
   "type": "module",
-  "homepage": "https://metalbolicx.github.io/chartex/#/",
+  "homepage": "https://metalbolicx.github.io/chartex/",
   "exports": {
     "import": {
       "types": "./dist/index.d.ts",
